--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -94,10 +94,14 @@
       }
     }
 
-    .videoWrapper iframe {
-      aspect-ratio: 16/9;
-      height: auto;
-      width: 100%;
+    .videoWrapper {
+      display: flex;
+
+      iframe {
+        aspect-ratio: 16/9;
+        height: auto;
+        width: 100%;
+      }
     }
   }
 
@@ -106,6 +110,15 @@
     margin-bottom: 40px;
     word-wrap: break-word;
 
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin-top: 1.5rem;
+    }
+    
     ol,
     ul {
       margin: 0;
