--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -35,7 +35,7 @@ $field-text-focus-color: #555;
 // Breakpoints variables
 $tablet-width: 768px;
 $desktop-width: 1024px;
-$max-width-container: 1160px;
+$max-width-container: 1400px;
 
 $font-weight-semibold: 600;
 
